# biotracker_beesbook

./: .gitmodules  BeesBookImgAnalysisTracker.cpp  BeesBookImgAnalysisTracker.h  CMakeLists.txt  Common.cpp  Common.h  DecoderParamsWidget.cpp  DecoderParamsWidget.h  DecoderParamsWidget.ui  EllipseFitterParamsWidget.cpp  EllipseFitterParamsWidget.h  EllipseFitterParamsWidget.ui  GridFitterParamsWidget.cpp  GridFitterParamsWidget.h  GridFitterParamsWidget.ui  GridfitterParamsWidget.ui  GroundTruthEvaluator.cpp  GroundTruthEvaluator.h  LocalizerParamsWidget.cpp  LocalizerParamsWidget.h  LocalizerParamsWidget.ui  ParamsSubWidgetBase.h  ParamsWidget.h  ParamsWidget.ui  PreprocessorParamsWidget.cpp  PreprocessorParamsWidget.h  PreprocessorParamsWidget.ui  RecognizerParamsWidget.cpp  RecognizerParamsWidget.h  RecognizerParamsWidget.ui  ToolWidget.ui  TransformerParamsWidget.ui
BeesBookTagMatcher/: BeesBookTagMatcher.cpp  BeesBookTagMatcher.h  InteractiveGrid.cpp  InteractiveGrid.h
BeesBookTagMatcher/resources/: InteractiveGrid.cpp  InteractiveGrid.h
ImgAnalysisTracker/: BeesBookImgAnalysisTracker.cpp  BeesBookImgAnalysisTracker.h  BioTrackerInterface.cpp  CMakeLists.txt  Common.cpp  Common.h  DecoderParamsWidget.cpp  DecoderParamsWidget.h  EllipseFitterParamsWidget.cpp  EllipseFitterParamsWidget.h  EllipseFitterParamsWidget.ui  GridFitterParamsWidget.cpp  GridFitterParamsWidget.h  GridfitterParamsWidget.ui  GroundTruthEvaluator.cpp  GroundTruthEvaluator.h  LocalizerParamsWidget.cpp  LocalizerParamsWidget.h  LocalizerParamsWidget.ui  ParamsSubWidgetBase.cpp  ParamsSubWidgetBase.h  ParamsWidget.h  PreprocessorParamsWidget.cpp  PreprocessorParamsWidget.h  PreprocessorParamsWidget.ui  ToolWidget.ui  Utils.cpp  Utils.h  Visualization.cpp  Visualization.h
ImgAnalysisTracker/legacy/: Grid3D.cpp  Grid3D.h
TagMatcher/: BeesBookTagMatcher.cpp  BeesBookTagMatcher.h  CMakeLists.txt  InteractiveGrid.cpp  InteractiveGrid.h
